5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4491/executions/1756_1580.log
== TEST (2019-05-29 13:05:18) 
-- CODE:
from numpy import *

vet1 = array(eval(input("vetores: ")))
vet2 = array(eval(input("vetores2: ")))

i = 0
j = 0
faltosos = 0
aprovados = 0
reprovados = 0
s = 0
maior = max(vet1)

while(i < size(vet1)):
	if(vet1[i] == -1):
		faltosos = faltosos + 1
	elif(vet1[i] >= 6):
		aprovados = aprovados + 1
		s = s + v1[i]
	elif(v1[i] < 6 and v1[i] >= 0):
		reprovados = reprovados + 1
		s = s + v1[i]
		
	if(maior == v1[i]):
		aluno = "" + v2[i]
		
	i = i + 1
	
print(faltosos)
print(aprovados)
print(reprovados)
m = s / (aprovados + reprovados)
print(round(m,2))
print(aluno)
	elif(vet[i] )
		
-- ERROR:
File "XXXX", line 35
    elif(vet[i] )
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:05:30) 
-- CODE:
from numpy import *

vet1 = array(eval(input("vetores: ")))
vet2 = array(eval(input("vetores2: ")))

i = 0
j = 0
faltosos = 0
aprovados = 0
reprovados = 0
s = 0
maior = max(vet1)

while(i < size(vet1)):
	if(vet1[i] == -1):
		faltosos = faltosos + 1
	elif(vet1[i] >= 6):
		aprovados = aprovados + 1
		s = s + v1[i]
	elif(v1[i] < 6 and v1[i] >= 0):
		reprovados = reprovados + 1
		s = s + v1[i]
		
	if(maior == v1[i]):
		aluno = "" + v2[i]
		
	i = i + 1
	
print(faltosos)
print(aprovados)
print(reprovados)
m = s / (aprovados + reprovados)
print(round(m,2))
print(aluno)
	elif(vet[i])
		
-- ERROR:
File "XXXX", line 35
    elif(vet[i])
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:05:40) 
-- CODE:
from numpy import *

vet1 = array(eval(input("vetores: ")))
vet2 = array(eval(input("vetores2: ")))

i = 0
j = 0
faltosos = 0
aprovados = 0
reprovados = 0
s = 0
maior = max(vet1)

while(i < size(vet1)):
	if(vet1[i] == -1):
		faltosos = faltosos + 1
	elif(vet1[i] >= 6):
		aprovados = aprovados + 1
		s = s + v1[i]
	elif(v1[i] < 6 and v1[i] >= 0):
		reprovados = reprovados + 1
		s = s + v1[i]
		
	if(maior == v1[i]):
		aluno = "" + v2[i]
		
	i = i + 1
	
print(faltosos)
print(aprovados)
print(reprovados)
m = s / (aprovados + reprovados)
print(round(m,2))
print(aluno)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:05:52) 
-- CODE:
from numpy import *

vet1 = array(eval(input("vetores: ")))
vet2 = array(eval(input("vetores2: ")))

i = 0
j = 0
faltosos = 0
aprovados = 0
reprovados = 0
s = 0
maior = max(vet1)

while(i < size(vet1)):
	if(vet1[i] == -1):
		faltosos = faltosos + 1
	elif(vet1[i] >= 6):
		aprovados = aprovados + 1
		s = s + v1[i]
	elif(v1[i] < 6 and v1[i] >= 0):
		reprovados = reprovados + 1
		s = s + v1[i]
		
	if(maior == v1[i]):
		aluno = "" + v2[i]
		
	i = i + 1
	
print(faltosos)
print(aprovados)
print(reprovados)
m = s / (aprovados + reprovados)
print(round(m,2))
print(aluno)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:06:58) 
-- CODE:
from numpy import *

vet1 = array(eval(input("vetores: ")))
vet2 = array(eval(input("vetores2: ")))

i = 0
j = 0
faltosos = 0
aprovados = 0
reprovados = 0
s = 0
maior = max(vet1)

while(i < size(vet1)):
	if(vet1[i] == -1):
		faltosos = faltosos + 1
	elif(vet1[i] >= 6):
		aprovados = aprovados + 1
		s = s + vet1[i]
	elif(vet1[i] < 6 and vet1[i] >= 0):
		reprovados = reprovados + 1
		s = s + vet1[i]
		
	if(maior == vet1[i]):
		aluno = "" + vet2[i]
		
	i = i + 1
	
print(faltosos)
print(aprovados)
print(reprovados)
m = s / (aprovados + reprovados)
print(round(m,2))
print(aluno)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:08:11) 
-- CODE:
from numpy import *

vet1 = array(eval(input("vetores: ")))
vet2 = array(eval(input("vetores2: ")))

i = 0
j = 0
faltosos = 0
aprovados = 0
reprovados = 0
s = 0
maior = max(vet1)

while(i < size(vet1)):
	if(vet1[i] == -1):
		faltosos = faltosos + 1
	elif(vet1[i] >= 6):
		aprovados = aprovados + 1
		s = s + vet1[i]
	elif(vet1[i] < 6 and vet1[i] >= 0):
		reprovados = reprovados + 1
		s = s + vet1[i]
		
	if(maior == vet1[i]):
		aluno = "" + vet2[i]
		
	i = i + 1
	
print(faltosos)
print(aprovados)
print(reprovados)
m = s / (aprovados + reprovados)
print(round(m, 2))
print(aluno)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:10:08) 
-- CODE:
from numpy import *

vet1 = array(eval(input("vetores: ")))
vet2 = array(eval(input("vetores2: ")))

i = 0
j = 0
faltosos = 0
aprovados = 0
reprovados = 0
s = 0
maior = max(vet1)

while(i < size(vet1)):
	if(vet1[i] == -1):
		faltosos = faltosos + 1
	elif(vet1[i] >= 6):
		aprovados = aprovados + 1
		s = s + vet1[i]
	elif(vet1[i] < 6 and vet1[i] >= 0):
		reprovados = reprovados + 1
		s = s + vet1[i]
		
	if(maior == vet1[i]):
		aluno = "" + vet2[i]
		
	i = i + 1
	
print(faltosos)
print(aprovados)
print(reprovados)
m = s / (aprovados + reprovados)
print(round(m, 2))
print(aluno)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:10:25) 
-- CODE:
from numpy import *

vet1 = array(eval(input("vetores: ")))
vet2 = array(eval(input("vetores2: ")))

i = 0
j = 0
faltosos = 0
aprovados = 0
reprovados = 0
s = 0
maior = max(vet1)

while(i < size(vet1)):
	if(vet1[i] == -1):
		faltosos = faltosos + 1
	elif(vet1[i] >= 6):
		aprovados = aprovados + 1
		s = s + vet1[i]
	elif(vet1[i] < 6 and vet1[i] >= 0):
		reprovados = reprovados + 1
		s = s + vet1[i]
		
	if(maior == vet1[i]):
		aluno = "" + vet2[i]
		
	i = i + 1
	
print(faltosos)
print(aprovados)
print(reprovados)
m = s / (aprovados + reprovados)
print(round(m, 2))
print(aluno)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:10:35) 
-- CODE:
from numpy import *

vet1 = array(eval(input("vetores: ")))
vet2 = array(eval(input("vetores2: ")))

i = 0
j = 0
faltosos = 0
aprovados = 0
reprovados = 0
s = 0
maior = max(vet1)

while(i < size(vet1)):
	if(vet1[i] == -1):
		faltosos = faltosos + 1
	elif(vet1[i] >= 6):
		aprovados = aprovados + 1
		s = s + vet1[i]
	elif(vet1[i] < 6 and vet1[i] >= 0):
		reprovados = reprovados + 1
		s = s + vet1[i]
		
	if(maior == vet1[i]):
		aluno = "" + vet2[i]
		
	i = i + 1
	
print(faltosos)
print(aprovados)
print(reprovados)
m = s / (aprovados + reprovados)
print(round(m, 2))
print(aluno)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:10:44) 
-- CODE:
from numpy import *

vet1 = array(eval(input("vetores: ")))
vet2 = array(eval(input("vetores2: ")))

i = 0
j = 0
faltosos = 0
aprovados = 0
reprovados = 0
s = 0
maior = max(vet1)

while(i < size(vet1)):
	if(vet1[i] == -1):
		faltosos = faltosos + 1
	elif(vet1[i] >= 6):
		aprovados = aprovados + 1
		s = s + vet1[i]
	elif(vet1[i] < 6 and vet1[i] >= 0):
		reprovados = reprovados + 1
		s = s + vet1[i]
		
	if(maior == vet1[i]):
		aluno = "" + vet2[i]
		
	i = i + 1
	
print(faltosos)
print(aprovados)
print(reprovados)
m = s / (aprovados + reprovados)
print(round(m, 2))
print(aluno)
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:11:08) 
-- CODE:
from numpy import *

vet1 = array(eval(input("vetores: ")))
vet2 = array(eval(input("vetores2: ")))

i = 0
j = 0
faltosos = 0
aprovados = 0
reprovados = 0
s = 0
maior = max(vet1)

while(i < size(vet1)):
	if(vet1[i] == -1):
		faltosos = faltosos + 1
	elif(vet1[i] >= 6):
		aprovados = aprovados + 1
		s = s + vet1[i]
	elif(vet1[i] < 6 and vet1[i] >= 0):
		reprovados = reprovados + 1
		s = s + vet1[i]
		
	if(maior == vet1[i]):
		aluno = "" + vet2[i]
		
	i = i + 1
	
print(faltosos)
print(aprovados)
print(reprovados)
m = s / (aprovados + reprovados)
print(round(m, 2))
print(aluno)
		
-- EXECUTION TIME:
0.560579
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
